<resources>
    <string name="app_name">Movie App</string>
    <string name="poster1_image">Poster1 Image</string>
    <string name="kgf_chapter_2">KGF: Chapter 2</string>
    <string name="_14_april_2022">14 April 2022</string>
    <string name="the_blood_soaked_land_of_kolar_gold_fields_has_a_new_overlord_now_rocky_whose">The blood-soaked land of Kolar Gold Fields has a new overlord now, Rocky, whose........</string>
    <string name="_777_charlie">777 Charlie</string>
    <string name="_10_june_2022">10 June 2022</string>
    <string name="a_naughty_and_energetic_pup_named_charlie_gives_a_lonely_and_reclusive_man_a_new">A naughty and energetic pup named Charlie gives a lonely and reclusive man a new ...</string>
    <string name="top_gun_maverick">Top Gun: Maverick</string>
    <string name="_27_may_2022">27 May 2022</string>
    <string name="after_more_than_30_years_of_service_as_one_of_the_navy_s_top_aviators_pete_maverick">After more than 30 years of service as one of the Navy\'s top aviators, Pete Maverick ....</string>
    <string name="poster2_image">Poster2 Image</string>
</resources>